--- a/Contact.css
+++ b/Contact.css
@@ -6,7 +6,7 @@ padding:0px;
 
 body{
 background-image:url("images/texture.jpg");
-backgroud-size:cove
+backgroud-size:cover;
 background-repeat:no-repeat;
 }
 
