--- a/Contact.css
+++ b/Contact.css
@@ -7,7 +7,8 @@ padding:0px;
 body{
 background-image:url("images/texture.jpg");
 backgroud-size:cover;
-background-repeat:no-repeat;
+  background-position:center;
+background-repeat:repeat;
 }
 
 .box{
