--- a/Contact.css
+++ b/Contact.css
@@ -7,8 +7,7 @@ padding:0px;
 body{
 background-image:url("images/texture.jpg");
 backgroud-size:cover;
-  background-position:center;
-background-repeat:repeat;
+  background-attachment:fixed;
 }
 
 .box{
