--- a/Contact.css
+++ b/Contact.css
@@ -7,6 +7,7 @@ padding:0px;
 body{
  background-image: url('image.jpg');
   background-size: cover;
+ background-repeat:repeat;
   background-position: center;
   height: 100vh; /* or fixed height */
   width: 100%;
