--- a/Aashirwad.css
+++ b/Aashirwad.css
@@ -8,27 +8,8 @@ background-color:cyan;
 }
 
 
-h2{
-text-align:center;
-color:maroon;
-font-weight:bold;
-  font-size:2em;
-}
 
 
-h6{
-text-align:center;
-color:maroon;
-font-weight:bold;
-font-size:2em;
-}
-
-h3{
-text-align:center;
-color:maroon;
-font-weight:bold;
-  padding:80px;
-}
 
 .nav{
 width:100%;
@@ -47,7 +28,25 @@ background-color:black;
 color:whitesmoke;
 border-radius:8px;
 }
+header{
+  padding:80px 0;
+  text-align:center;
+}
+h1{
+  font-size:48px;
+  margin:0 0 16px 0;
+}
+h2{
+  font-weight:300;
+  font-size:24px;
+  margin:0 0 16px 0;
+}
 
+.container{
+  margin:0 auto;
+  padding: 0 20px 0 20px;
+  max-width:900px;
+}
 
 .card-container{
 display:flex;
